Updated student criteria on template conf file

--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -102,6 +102,8 @@
     "# Read preprocessing target params\n",
     "min_num_credits_checkin = cfg.preprocessing.target.params[\"min_num_credits_checkin\"]\n",
     "min_num_credits_target = cfg.preprocessing.target.params[\"min_num_credits_target\"]\n",
+    "student_criteria = cfg.preprocessing.target.student_criteria\n",
+    "student_id_col = cfg.student_id_col\n",
     "\n",
     "# Create student-term dataset\n",
     "df_student_terms = preprocessing.dataops.make_student_term_dataset(\n",
@@ -114,21 +116,12 @@
     "    key_course_ids=key_course_ids,\n",
     ")\n",
     "\n",
-    "student_criteria = {\n",
-    "    \"enrollment_type\": [\"FIRST-TIME\", \"RE-ADMIT\", \"TRANSFER-IN\"],\n",
-    "    # \"enrollment_intensity_first_term\": [\"FULL-TIME\", \"PART-TIME\"], # Example, but commented out.\n",
-    "    # \"credential_type_sought_year_1\": \"Associate's Degree\",  # Example, but commented out.\n",
-    "}\n",
-    "intensity_time_limits = [\n",
-    "    (\"FULL-TIME\", 1.0, \"year\"),\n",
-    "    (\"PART-TIME\", 1.0, \"year\"),\n",
-    "]\n",
     "\n",
-    "student_id_col = \"student_guid\"\n",
+    "\n",
     "eligible_students = targets.shared.select_students_by_criteria(\n",
     "    df_student_terms,\n",
     "    student_id_cols=student_id_col,\n",
-    "    **student_criteria,\n",
+    "    **student_criteria\n",
     ")\n",
     "max_term_rank = df_student_terms[\"term_rank\"].max()\n",
     "\n",
