--- a/tests/institution_onboarding/institution_onboarding.ipynb
+++ b/tests/institution_onboarding/institution_onboarding.ipynb
@@ -124,8 +124,6 @@
     "    with open(f\"{config_file_path}/{institution_id}_{model_name}_configuration_file.toml\", 'w') as f:\n",
     "        toml.dump(toml_template, f)\n",
     "\n",
-    "    \n",
-    "\n",
     "\n",
     "def delete_institution(institution_id):\n",
     "    \"\"\"\n",
@@ -192,7 +190,7 @@
    "outputs": [],
    "source": [
     "# Example usage (comment out to test)\n",
-    "institution_id  = \"pdp_institution_123\" # Example institution ID.  Should be parameterized in real use cases.\n",
+    "institution_id  = \"new_institution_id\" # Example institution ID.  Should be parameterized in real use cases.\n",
     "print(institution_id)"
    ]
   },
@@ -242,29 +240,8 @@
     "# job_name = \"PDP_inference_pipeline\"\n",
     "job_id = next(w.jobs.list(name=job_name)).job_id\n",
     "\n",
-    "run_job = w.jobs.run_now(job_id, job_parameters={'synthetic_needed': \"True\", 'institution_id': institution_id, 'sst_job_id': f\"first_inference_job_{institution_id}_inference_job_id_{str(random.randint(1, 1000))}\"})\n",
+    "run_job = w.jobs.run_now(job_id, job_parameters={'synthetic_needed': \"True\", 'num_students': '450', 'institution_id': institution_id, 'sst_job_id': f\"first_inference_job_{institution_id}_inference_job_id_{str(random.randint(1, 1000))}\"})\n",
     "print(run_job.response)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7f8cc661-84d2-4495-bd11-0415ff076a29",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "print(run_job.result())"
    ]
   },
   {
