--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -117,11 +117,8 @@
     ")\n",
     "\n",
     "\n",
-    "\n",
     "eligible_students = targets.shared.select_students_by_criteria(\n",
-    "    df_student_terms,\n",
-    "    student_id_cols=student_id_col,\n",
-    "    **student_criteria\n",
+    "    df_student_terms, student_id_cols=student_id_col, **student_criteria\n",
     ")\n",
     "max_term_rank = df_student_terms[\"term_rank\"].max()\n",
     "\n",
