--- a/tests/institution_onboarding/institution_onboarding.ipynb
+++ b/tests/institution_onboarding/institution_onboarding.ipynb
@@ -33,7 +33,6 @@
     "import random\n",
     "import toml\n",
     "import os\n",
-    "import shutil\n",
     "\n",
     "# Initialize clients for Databricks, Google Cloud Storage, and MLflow\n",
     "w = WorkspaceClient()\n",
@@ -42,7 +41,7 @@
     "\n",
     "# Configuration variables\n",
     "catalog_name = \"dev_sst_02\"  # Name of the Unity Catalog\n",
-    "medallion_levels = [\"silver\", \"gold\", \"bronze\"]  # List of data medallion levels\n"
+    "medallion_levels = [\"silver\", \"gold\", \"bronze\"]  # List of data medallion levels"
    ]
   },
   {
@@ -73,55 +72,72 @@
     "    \"\"\"\n",
     "\n",
     "    # Create a GCS bucket for SST application data.\n",
-    "    sst_app_bucket = storage_client.create_bucket(f\"{catalog_name}_{institution_id}_sst_application\", location=\"us-east4\")\n",
+    "    sst_app_bucket = storage_client.create_bucket(\n",
+    "        f\"{catalog_name}_{institution_id}_sst_application\", location=\"us-east4\"\n",
+    "    )\n",
     "\n",
-    "    # TODO CREATE A SERVICE ACCOUNT PER WORKSPACE \n",
+    "    # TODO CREATE A SERVICE ACCOUNT PER WORKSPACE\n",
     "\n",
     "    # Grant object admin access to the specified service account.\n",
     "    policy = sst_app_bucket.get_iam_policy(requested_policy_version=3)\n",
-    "    policy.bindings.append({\"role\": \"roles/storage.objectAdmin\", \n",
-    "                            \"members\": {\"serviceAccount:pedro-pdp-inference-pipeline@dev-sst-02.iam.gserviceaccount.com\"}})\n",
+    "    policy.bindings.append(\n",
+    "        {\n",
+    "            \"role\": \"roles/storage.objectAdmin\",\n",
+    "            \"members\": {\n",
+    "                \"serviceAccount:pedro-pdp-inference-pipeline@dev-sst-02.iam.gserviceaccount.com\"\n",
+    "            },\n",
+    "        }\n",
+    "    )\n",
     "    sst_app_bucket.set_iam_policy(policy)\n",
     "\n",
     "    # Create Unity Catalog schemas for each medallion level.\n",
     "    for medallion in medallion_levels:\n",
-    "        w.schemas.create(name=f'{institution_id}_{medallion}', catalog_name=catalog_name)\n",
+    "        w.schemas.create(\n",
+    "            name=f\"{institution_id}_{medallion}\", catalog_name=catalog_name\n",
+    "        )\n",
     "\n",
     "    # Create a managed volume in the bronze schema for internal pipeline data.\n",
-    "    created_volume = w.volumes.create(catalog_name=catalog_name,\n",
-    "                                  schema_name=f\"{institution_id}_bronze\",\n",
-    "                                  name=f'pdp_pipeline_internal',\n",
-    "                                  volume_type=catalog.VolumeType.MANAGED)\n",
-    "    \n",
+    "    w.volumes.create(\n",
+    "        catalog_name=catalog_name,\n",
+    "        schema_name=f\"{institution_id}_bronze\",\n",
+    "        name=\"pdp_pipeline_internal\",\n",
+    "        volume_type=catalog.VolumeType.MANAGED,\n",
+    "    )\n",
     "\n",
     "    # Create a managed volume in the gold schema for the configuration files (.toml files)\n",
-    "    created_volume = w.volumes.create(catalog_name=catalog_name,\n",
-    "                                  schema_name=f\"{institution_id}_gold\",\n",
-    "                                  name=f'gold_volume',\n",
-    "                                  volume_type=catalog.VolumeType.MANAGED)\n",
-    "\n",
+    "    w.volumes.create(\n",
+    "        catalog_name=catalog_name,\n",
+    "        schema_name=f\"{institution_id}_gold\",\n",
+    "        name=\"gold_volume\",\n",
+    "        volume_type=catalog.VolumeType.MANAGED,\n",
+    "    )\n",
     "\n",
     "    # Copy an existing model to the new institution's bronze schema.  This is a placeholder.\n",
     "    # In a real scenario, models would likely be trained specifically for the institution.\n",
     "    model_name = \"latest_enrollment_model\"\n",
-    "    existing_model_uri = f\"models:/{catalog_name}.institution_x_bronze.{model_name}/1\" \n",
+    "    existing_model_uri = f\"models:/{catalog_name}.institution_x_bronze.{model_name}/1\"\n",
     "    new_institution_model_uri = f\"{catalog_name}.{institution_id}_gold.{model_name}\"\n",
     "\n",
     "    mlflow.register_model(existing_model_uri, new_institution_model_uri)\n",
     "\n",
     "    # Creating an institution configuration file copying from a template. This is a placeholder.\n",
     "    # In a real scenario, toml file is specifically built for the institution.\n",
-    "    toml_template_path ='/Workspace/Users/pedro.melendez@datakind.org/repo-student-success-tool-develop/tests/institution_onboarding/template_enrollment_model_toml_file.toml'\n",
-    "    with open(toml_template_path, 'r') as f:\n",
+    "    toml_template_path = \"/Workspace/Users/pedro.melendez@datakind.org/repo-student-success-tool-develop/tests/institution_onboarding/template_enrollment_model_toml_file.toml\"\n",
+    "    with open(toml_template_path, \"r\") as f:\n",
     "        toml_template = toml.load(f)\n",
     "\n",
-    "    toml_template['institution_id'], toml_template['institution_name'] = institution_id, institution_id\n",
+    "    toml_template[\"institution_id\"], toml_template[\"institution_name\"] = (\n",
+    "        institution_id,\n",
+    "        institution_id,\n",
+    "    )\n",
     "\n",
     "    # Create directory on the volume\n",
     "    config_file_path = f\"/Volumes/{catalog_name}/{institution_id}_gold/gold_volume/configuration_files/\"\n",
     "    os.makedirs(config_file_path, exist_ok=True)\n",
     "\n",
-    "    with open(f\"{config_file_path}/{institution_id}_{model_name}_configuration_file.toml\", 'w') as f:\n",
+    "    with open(\n",
+    "        f\"{config_file_path}/{institution_id}_{model_name}_configuration_file.toml\", \"w\"\n",
+    "    ) as f:\n",
     "        toml.dump(toml_template, f)\n",
     "\n",
     "\n",
@@ -134,21 +150,24 @@
     "    \"\"\"\n",
     "    try:\n",
     "        # Delete the GCS bucket.  Force=True handles non-empty buckets.\n",
-    "        bucket = storage_client.get_bucket(f\"{catalog_name}_{institution_id}_sst_application\")\n",
+    "        bucket = storage_client.get_bucket(\n",
+    "            f\"{catalog_name}_{institution_id}_sst_application\"\n",
+    "        )\n",
     "        bucket.delete(force=True)\n",
     "    except Exception as e:\n",
     "        print(f\"Error deleting bucket: {e}\")\n",
     "\n",
     "    try:\n",
     "        # Delete the managed volume.\n",
-    "        w.volumes.delete(name=f'{catalog_name}.{institution_id}_bronze.pdp_pipeline_internal')\n",
+    "        w.volumes.delete(\n",
+    "            name=f\"{catalog_name}.{institution_id}_bronze.pdp_pipeline_internal\"\n",
+    "        )\n",
     "    except Exception as e:\n",
     "        print(f\"Error deleting volume: {e}\")\n",
     "\n",
-    "\n",
     "    try:\n",
     "        # Delete the managed volume.\n",
-    "        w.volumes.delete(name=f'{catalog_name}.{institution_id}_gold.gold_volume')\n",
+    "        w.volumes.delete(name=f\"{catalog_name}.{institution_id}_gold.gold_volume\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error deleting volume: {e}\")\n",
     "\n",
@@ -163,12 +182,20 @@
     "    # Delete tables and schemas for each medallion level.\n",
     "    for medallion in medallion_levels:\n",
     "        try:\n",
-    "            all_tables = [table.name for table in w.tables.list(catalog_name=catalog_name, schema_name=f\"{institution_id}_{medallion}\")]\n",
+    "            all_tables = [\n",
+    "                table.name\n",
+    "                for table in w.tables.list(\n",
+    "                    catalog_name=catalog_name,\n",
+    "                    schema_name=f\"{institution_id}_{medallion}\",\n",
+    "                )\n",
+    "            ]\n",
     "            for table in all_tables:\n",
-    "                w.tables.delete(full_name=f'{catalog_name}.{institution_id}_{medallion}.{table}')\n",
-    "            w.schemas.delete(full_name=f'{catalog_name}.{institution_id}_{medallion}')\n",
+    "                w.tables.delete(\n",
+    "                    full_name=f\"{catalog_name}.{institution_id}_{medallion}.{table}\"\n",
+    "                )\n",
+    "            w.schemas.delete(full_name=f\"{catalog_name}.{institution_id}_{medallion}\")\n",
     "        except Exception as e:\n",
-    "             print(f\"Error deleting schema or tables for {medallion}: {e}\")"
+    "            print(f\"Error deleting schema or tables for {medallion}: {e}\")"
    ]
   },
   {
@@ -190,7 +217,7 @@
    "outputs": [],
    "source": [
     "# Example usage (comment out to test)\n",
-    "institution_id  = \"new_institution_id\" # Example institution ID.  Should be parameterized in real use cases.\n",
+    "institution_id = \"new_institution_id\"  # Example institution ID.  Should be parameterized in real use cases.\n",
     "print(institution_id)"
    ]
   },
@@ -240,8 +267,16 @@
     "# job_name = \"PDP_inference_pipeline\"\n",
     "job_id = next(w.jobs.list(name=job_name)).job_id\n",
     "\n",
-    "run_job = w.jobs.run_now(job_id, job_parameters={'synthetic_needed': \"True\", 'num_students': '450', 'institution_id': institution_id, 'sst_job_id': f\"first_inference_job_{institution_id}_inference_job_id_{str(random.randint(1, 1000))}\"})\n",
-    "print(run_job.response)\n"
+    "run_job = w.jobs.run_now(\n",
+    "    job_id,\n",
+    "    job_parameters={\n",
+    "        \"synthetic_needed\": \"True\",\n",
+    "        \"num_students\": \"450\",\n",
+    "        \"institution_id\": institution_id,\n",
+    "        \"sst_job_id\": f\"first_inference_job_{institution_id}_inference_job_id_{str(random.randint(1, 1000))}\",\n",
+    "    },\n",
+    ")\n",
+    "print(run_job.response)"
    ]
   },
   {
