Including SST app parameters

--- a/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
@@ -30,16 +30,18 @@
     "handles cases where a Spark session cannot be initialized (e.g., running locally).\n",
     "\n",
     "\"\"\"\n",
-    "\n",
     "import logging\n",
     "import os\n",
     "\n",
     "from databricks.connect import DatabricksSession\n",
+    "from databricks.sdk import WorkspaceClient\n",
     "from databricks.sdk.runtime import dbutils\n",
     "from google.cloud import storage\n",
+    "from email.headerregistry import Address\n",
     "\n",
     "import student_success_tool.dataio as dataio\n",
     "from student_success_tool.schemas import pdp as schemas\n",
+    "from student_success_tool import emails\n",
     "\n",
     "# Configure logging\n",
     "logging.basicConfig(level=logging.INFO)\n",
@@ -54,25 +56,27 @@
     "\n",
     "# Input parameters (provided via Databricks widgets or job task values)\n",
     "DB_workspace = dbutils.widgets.get(\"DB_workspace\")  # Databricks workspace identifier\n",
+    "notif_email = dbutils.widgets.get(\"notification_email\")\n",
+    "# The institution_name parameter is the databricksified institution name and is NOT the same as the institution id in GCP.\n",
+    "institution_name = dbutils.widgets.get(\"databricks_institution_name\")\n",
+    "course_file_name = dbutils.widgets.get(\"course_file_name\")\n",
+    "cohort_file_name = dbutils.widgets.get(\"cohort_file_name\")\n",
+    "# FYI: the job run id corresponds to the {{parent_run_id}} for jobs with two or more tasks https://stackoverflow.com/questions/75428900/confusion-about-run-id-and-parent-run-id-variables-for-databricks-jobs\n",
+    "db_run_id = dbutils.widgets.get(\"db_run_id\")\n",
+    "# This is the name of the external bucket -- the internal bucket is simply this name with _internal suffixed.\n",
+    "gcp_bucket_name = dbutils.widgets.get(\"gcp_bucket_name\")\n",
     "\n",
-    "institution_id = dbutils.widgets.get(\"institution_id\")\n",
-    "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
-    "\n",
-    "# Handle synthetic data generation case\n",
-    "if dbutils.widgets.get(\"synthetic_needed\") == \"True\":\n",
-    "    course_file_name = dbutils.jobs.taskValues.get(\n",
-    "        taskKey=\"generate_synthetic_data\", key=\"course_file_name\"\n",
-    "    )\n",
-    "    cohort_file_name = dbutils.jobs.taskValues.get(\n",
-    "        taskKey=\"generate_synthetic_data\", key=\"cohort_file_name\"\n",
-    "    )\n",
-    "else:\n",
-    "    course_file_name = dbutils.widgets.get(\"course_file_name\")\n",
-    "    cohort_file_name = dbutils.widgets.get(\"cohort_file_name\")\n",
-    "\n",
+    "# Notify user that an inference run has been kicked off.\n",
+    "w = WorkspaceClient()\n",
+    "MANDRILL_USERNAME = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_USERNAME\")\n",
+    "MANDRILL_PASSWORD = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_PASSWORD\")\n",
+    "SENDER_EMAIL = Address(\"Datakind Info\", \"help\", \"datakind.org\")\n",
+    "DK_CC_EMAIL = 'education@datakind.org'\n",
+    "# NOT WORKING -- can't find the package\n",
+    "#emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
     "\n",
     "# Define paths (using Unity Catalog volumes)\n",
-    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_id}_bronze/pdp_pipeline_internal/inference_jobs/{sst_job_id}/raw_files/\"\n",
+    "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_name}_bronze/bronze_volume/inference_jobs/{db_run_id}/raw_files/\"\n",
     "\n",
     "\n",
     "# Create internal pipeline directory\n",
@@ -80,9 +84,7 @@
     "\n",
     "# Initialize GCS client\n",
     "storage_client = storage.Client()\n",
-    "bucket_name = f\"{DB_workspace}_{institution_id}_sst_application\"\n",
-    "\n",
-    "bucket = storage_client.bucket(bucket_name)\n",
+    "bucket = storage_client.bucket(gcp_bucket_name)\n",
     "sst_container_folder = \"validated\"\n",
     "\n",
     "# Download course data from GCS\n",
@@ -116,27 +118,27 @@
     "\n",
     "# Define Delta Lake table details\n",
     "catalog = DB_workspace\n",
-    "write_schema = f\"{institution_id}_bronze\"\n",
+    "write_schema = f\"{institution_name}_bronze\"\n",
     "\n",
     "\n",
     "# Write DataFrames to Delta Lake tables (only if Spark session is available)\n",
     "if spark_session:\n",
     "    dataio.to_delta_table(\n",
     "        df_course,\n",
-    "        f\"{catalog}.{write_schema}.{sst_job_id}_course_dataset_validated\",\n",
+    "        f\"{catalog}.{write_schema}.{db_run_id}_course_dataset_validated\",\n",
     "        spark_session=spark_session,\n",
     "    )\n",
     "\n",
     "    dataio.to_delta_table(\n",
     "        df_cohort,\n",
-    "        f\"{catalog}.{write_schema}.{sst_job_id}_cohort_dataset_validated\",\n",
+    "        f\"{catalog}.{write_schema}.{db_run_id}_cohort_dataset_validated\",\n",
     "        spark_session=spark_session,\n",
     "    )\n",
     "\n",
     "    # Verify Delta Lake write by reading data back\n",
     "    df_course_from_catalog = schemas.RawPDPCourseDataSchema(\n",
     "        dataio.from_delta_table(\n",
-    "            f\"{catalog}.{write_schema}.{sst_job_id}_course_dataset_validated\",\n",
+    "            f\"{catalog}.{write_schema}.{db_run_id}_course_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
     "    )\n",
@@ -144,7 +146,7 @@
     "\n",
     "    df_cohort_from_catalog = schemas.RawPDPCohortDataSchema(\n",
     "        dataio.from_delta_table(\n",
-    "            f\"{catalog}.{write_schema}.{sst_job_id}_cohort_dataset_validated\",\n",
+    "            f\"{catalog}.{write_schema}.{db_run_id}_cohort_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
     "    )\n",
