--- a/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_model_inference/model_inference_pipeline_task.ipynb
@@ -66,20 +66,21 @@
     "# Input Parameters ( from Databricks widgets)\n",
     "DB_workspace = dbutils.widgets.get(\"DB_workspace\")\n",
     "catalog = DB_workspace\n",
-    "institution_id = dbutils.widgets.get(\"institution_id\")\n",
-    "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
+    "institution_name = dbutils.widgets.get(\"databricks_institution_name\")\n",
+    "sst_job_id = dbutils.widgets.get(\"db_run_id\")\n",
     "model_name = dbutils.widgets.get(\"model_name\")\n",
+    "model_version = dbutils.widgets.get(\"version_id\")\n",
     "model_type = dbutils.widgets.get(\"model_type\")\n",
     "\n",
     "# --- Unity caatalog schemas ---\n",
-    "read_schema = f\"{institution_id}_silver\"\n",
-    "write_schema = f\"{institution_id}_silver\"\n",
-    "model_schema = f\"{institution_id}_gold\"\n",
+    "read_schema = f\"{institution_name}_silver\"\n",
+    "write_schema = f\"{institution_name}_silver\"\n",
+    "model_schema = f\"{institution_name}_gold\"\n",
     "\n",
     "\n",
     "# --- Insititution Configuration ---\n",
     "cfg = dataio.read_config(\n",
-    "    f\"/Volumes/{DB_workspace}/{institution_id}_gold/gold_volume/configuration_files/{institution_id}_{model_name}_configuration_file.toml\",\n",
+    "    f\"/Volumes/{DB_workspace}/{institution_name}_gold/gold_volume/configuration_files/{institution_name}_{model_name}_configuration_file.toml\",\n",
     "    schema=schemas.PDPProjectConfig,\n",
     ")\n",
     "\n",
@@ -278,22 +279,6 @@
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "ca3cb9c8-ca9c-4a63-8847-b608bfe92513",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
