--- a/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_processing/data_processing_pipeline_task.ipynb
@@ -26,7 +26,7 @@
     "\"\"\"\n",
     "\n",
     "import logging\n",
-    "\n",
+    "import os\n",
     "import mlflow\n",
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils\n",
@@ -37,7 +37,6 @@
     "import student_success_tool.targets.pdp as targets\n",
     "import student_success_tool.schemas.pdp as schemas\n",
     "import student_success_tool.preprocessing.pdp as preprocessing\n",
-    "\n",
     "\n",
     "# Disable mlflow autologging (due to Databricks issues during feature selection)\n",
     "mlflow.autolog(disable=True)\n",
@@ -56,28 +55,29 @@
     "# Databricks workspace identifier\n",
     "DB_workspace = dbutils.widgets.get(\"DB_workspace\")\n",
     "model_name = dbutils.widgets.get(\"model_name\")\n",
+    "model_version = dbutils.widgets.get(\"version_id\")\n",
     "\n",
     "# Input parameters from Databricks widgets\n",
-    "institution_id = dbutils.widgets.get(\"institution_id\")\n",
-    "sst_job_id = dbutils.widgets.get(\"sst_job_id\")\n",
+    "institution_name = dbutils.widgets.get(\"databricks_institution_name\")\n",
+    "db_run_id = dbutils.widgets.get(\"db_run_id\")\n",
     "\n",
     "# Delta Lake table details (read from job task values set by data ingestion task)\n",
     "catalog = DB_workspace\n",
-    "read_schema = f\"{institution_id}_bronze\"\n",
-    "write_schema = f\"{institution_id}_silver\"\n",
+    "read_schema = f\"{institution_name}_bronze\"\n",
+    "write_schema = f\"{institution_name}_silver\"\n",
     "\n",
     "# Read DataFrames from Delta Lake tables (if Spark session is available)\n",
     "if spark_session:\n",
     "    df_course = schemas.RawPDPCourseDataSchema(\n",
     "        dataio.from_delta_table(\n",
-    "            f\"{catalog}.{read_schema}.{sst_job_id}_course_dataset_validated\",\n",
+    "            f\"{catalog}.{read_schema}.{db_run_id}_course_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
     "    )\n",
     "\n",
     "    df_cohort = schemas.RawPDPCohortDataSchema(\n",
     "        dataio.from_delta_table(\n",
-    "            f\"{catalog}.{read_schema}.{sst_job_id}_cohort_dataset_validated\",\n",
+    "            f\"{catalog}.{read_schema}.{db_run_id}_cohort_dataset_validated\",\n",
     "            spark_session=spark_session,\n",
     "        )\n",
     "    )\n",
@@ -88,7 +88,7 @@
     "\n",
     "# Reading the parameters from the institution's configuration file\n",
     "cfg = dataio.read_config(\n",
-    "    f\"/Volumes/{DB_workspace}/{institution_id}_gold/gold_volume/configuration_files/{institution_id}_{model_name}_configuration_file.toml\",\n",
+    "    f\"/Volumes/{DB_workspace}/{institution_name}_gold/gold_volume/configuration_files/{institution_name}_{model_name}_configuration_file.toml\",\n",
     "    schema=schemas.PDPProjectConfig,\n",
     ")\n",
     "\n",
@@ -134,7 +134,7 @@
     "\n",
     "# Save processed dataset to Delta Lake (if Spark session is available)\n",
     "if spark_session:\n",
-    "    write_table_path = f\"{catalog}.{write_schema}.{sst_job_id}_processed_dataset\"\n",
+    "    write_table_path = f\"{catalog}.{write_schema}.{db_run_id}_processed_dataset\"\n",
     "    dataio.to_delta_table(df_processed, write_table_path, spark_session=spark_session)\n",
     "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
     "else:\n",
