--- a/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
+++ b/pipelines/tasks/sst_pdp_data_ingestion/data_ingestion_pipeline_task.ipynb
@@ -71,9 +71,9 @@
     "MANDRILL_USERNAME = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_USERNAME\")\n",
     "MANDRILL_PASSWORD = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_PASSWORD\")\n",
     "SENDER_EMAIL = Address(\"Datakind Info\", \"help\", \"datakind.org\")\n",
-    "DK_CC_EMAIL = 'education@datakind.org'\n",
+    "DK_CC_EMAIL = \"education@datakind.org\"\n",
     "# NOT WORKING -- can't find the package\n",
-    "#emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
+    "# emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
     "\n",
     "# Define paths (using Unity Catalog volumes)\n",
     "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_name}_bronze/bronze_volume/inference_jobs/{db_run_id}/raw_files/\"\n",
