Changed folder names

--- a/pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.ipynb
+++ b/pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.ipynb
@@ -19,15 +19,16 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "This script ingests course and cohort data for the Student Success Tool (SST) pipeline.\n",
+    "This notebook ingests course and cohort data for the Student Success Tool (SST) pipeline.\n",
     "\n",
     "It reads data from CSV files stored in a Google Cloud Storage (GCS) bucket, \n",
     "performs schema validation using the `pdp` library, and writes the validated data \n",
     "to Delta Lake tables in Databricks Unity Catalog.\n",
     "\n",
-    "The script is designed to run within a Databricks environment, leveraging Databricks \n",
-    "utilities for widget input, job task values, and Spark session management. It also \n",
-    "handles cases where a Spark session cannot be initialized (e.g., running locally).\n",
+    "The notebook is designed to run within a Databricks environment as a job task, leveraging Databricks \n",
+    "utilities for widget input, job task values, and Spark session management.\n",
+    "\n",
+    "This is a POC notebook, it is advised to refactor to .py and add tests before using in production.\n",
     "\n",
     "\"\"\"\n",
     "import logging\n",
@@ -170,7 +171,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "data_ingestion_pipeline_task",
+   "notebookName": "pdp_data_ingestion",
    "widgets": {}
   },
   "kernelspec": {
