--- a/pipelines/tasks/pdp_data_validation/pdp_data_validation.ipynb
+++ b/pipelines/tasks/pdp_data_validation/pdp_data_validation.ipynb
@@ -24,7 +24,7 @@
     "from databricks.sdk.runtime import dbutils\n",
     "\n",
     "processed_dataset_table_path = dbutils.jobs.taskValues.get(\n",
-    "    taskKey=\"data_processing\", key=\"processed_dataset_path\"\n",
+    "    taskKey=\"data_preprocessing\", key=\"processed_dataset_path\"\n",
     ")\n",
     "print(processed_dataset_table_path)\n",
     "\n",
@@ -44,7 +44,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "data_validation_pipeline_task",
+   "notebookName": "pdp_data_validation",
    "widgets": {}
   },
   "language_info": {
