--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -25,7 +25,10 @@
     "reads a processed dataset from Delta Lake, performs inference, calculates SHAP values, \n",
     "and writes the predictions back to Delta Lake.  \n",
     "\n",
-    "It's designed to run within a Databricks environment.\n",
+    "The notebook is designed to run within a Databricks environment as a job task, leveraging Databricks \n",
+    "utilities for widget input, job task values, and Spark session management.\n",
+    "\n",
+    "This is a POC notebook, it is advised to refactor to .py and add tests before using in production.\n",
     "\"\"\"\n",
     "\n",
     "# Import necessary libraries\n",
@@ -109,7 +112,7 @@
     "    }.get(model_type, mlflow.pyfunc.load_model)\n",
     "\n",
     "    model = load_model_func(model_uri)\n",
-    "    logging.info(f\"MLflow '{model_type}' model loaded from '{model_uri}'\")\n",
+    "    logging.info(\"MLflow '%s' model loaded from '%s'\", model_type, model_uri)\n",
     "    return model\n",
     "\n",
     "\n",
@@ -188,7 +191,7 @@
     "        predicted_dataset_path,\n",
     "        spark_session=spark_session,\n",
     "    )\n",
-    "    logging.info(f\"Predictions saved to: {predicted_dataset_path}\")\n",
+    "    logging.info(\"Predictions saved to: %s\",predicted_dataset_path)\n",
     "\n",
     "    # --- SHAP Values Calculation ---\n",
     "    pred_probs = df_predicted_dataset[\"predicted_prob\"]\n",
@@ -347,7 +350,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "model_inference_pipeline_task",
+   "notebookName": "pdp_model_inference",
    "widgets": {}
   },
   "language_info": {
