--- a/pipelines/tasks/pdp_synthetic_data_generation/pdp_synthetic_data_generation_pipeline_task.ipynb
+++ b/pipelines/tasks/pdp_synthetic_data_generation/pdp_synthetic_data_generation_pipeline_task.ipynb
@@ -19,11 +19,13 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "This script generates synthetic student cohort and course data using the `faker` \n",
-    "and `pdp` libraries, and uploads the generated CSV files to a Google Cloud \n",
-    "Storage (GCS) bucket.  It's designed to run within a Databricks environment, \n",
-    "utilizing Databricks widgets for input parameters and job task values for passing\n",
-    "filenames between tasks.\n",
+    "This script generates synthetic student cohort and course data using the faker \n",
+    "and pdp libraries, and uploads the generated CSV files to a Google Cloud Storage (GCS) bucket.  \n",
+    "\n",
+    "The notebook is designed to run within a Databricks environment as a job task, leveraging Databricks \n",
+    "utilities for widget input, job task values, and Spark session management.\n",
+    "\n",
+    "This is a POC notebook, it is advised to refactor to .py and add tests before using in production.\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -65,10 +67,10 @@
     "else:\n",
     "    bucket_name = dbutils.widgets.get(\"save_dir\")\n",
     "\n",
-    "logging.info(f\"Save directory: {bucket_name}\")\n",
-    "logging.info(f\"normalize_col_names: {normalize_col_names}\")\n",
-    "logging.info(f\"seed: {seed}\")\n",
-    "logging.info(f\"num_students: {num_students}\")\n",
+    "logging.info(\"Save directory: %s\", bucket_name)\n",
+    "logging.info(\"normalize_col_names: %s\", normalize_col_names)\n",
+    "logging.info(\"seed: %s\", seed)\n",
+    "logging.info(\"num_students: %s\", num_students)\n",
     "\n",
     "\n",
     "# Initialize Faker with optional seed and custom providers\n",
@@ -150,7 +152,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "synthetic_data_generation_pipeline_task",
+   "notebookName": "pdp_synthetic_data_generation_pipeline_task",
    "widgets": {}
   },
   "language_info": {
