--- a/pipelines/tasks/pdp_data_preprocessing/pdp_data_preprocessing.ipynb
+++ b/pipelines/tasks/pdp_data_preprocessing/pdp_data_preprocessing.ipynb
@@ -20,8 +20,12 @@
     "\n",
     "It reads validated course and cohort data from Delta Lake tables, creates a student-term \n",
     "dataset, applies target variable logic (currently using a workaround due to library \n",
-    "limitations), and saves the processed dataset back to a Delta Lake table.  It's \n",
-    "designed to run within a Databricks environment.\n",
+    "limitations), and saves the processed dataset back to a Delta Lake table.  \n",
+    "\n",
+    "The notebook is designed to run within a Databricks environment as a job task, leveraging Databricks \n",
+    "utilities for widget input, job task values, and Spark session management.\n",
+    "\n",
+    "This is a POC notebook, it is advised to refactor to .py and add tests before using in production.\n",
     "\n",
     "\"\"\"\n",
     "\n",
@@ -135,7 +139,7 @@
     "if spark_session:\n",
     "    write_table_path = f\"{catalog}.{write_schema}.{db_run_id}_processed_dataset\"\n",
     "    dataio.to_delta_table(df_processed, write_table_path, spark_session=spark_session)\n",
-    "    logging.info(f\"Processed dataset written to: {write_table_path}\")\n",
+    "    logging.info(\"Processed dataset written to table: %s\", write_table_path)\n",
     "else:\n",
     "    logging.warning(\"Spark session not initialized. Cannot write processed dataset.\")\n",
     "\n",
@@ -155,7 +159,7 @@
    "notebookMetadata": {
     "pythonIndentUnit": 4
    },
-   "notebookName": "data_processing_pipeline_task",
+   "notebookName": "pdp_data_preprocessing",
    "widgets": {}
   },
   "language_info": {
