add email + save files to volume

--- a/pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.ipynb
+++ b/pipelines/tasks/pdp_data_ingestion/pdp_data_ingestion.ipynb
@@ -57,24 +57,14 @@
     "\n",
     "# Input parameters (provided via Databricks widgets or job task values)\n",
     "DB_workspace = dbutils.widgets.get(\"DB_workspace\")  # Databricks workspace identifier\n",
-    "notif_email = dbutils.widgets.get(\"notification_email\")\n",
     "# The institution_name parameter is the databricksified institution name and is NOT the same as the institution id in GCP.\n",
     "institution_name = dbutils.widgets.get(\"databricks_institution_name\")\n",
     "course_file_name = dbutils.widgets.get(\"course_file_name\")\n",
     "cohort_file_name = dbutils.widgets.get(\"cohort_file_name\")\n",
-    "# FYI: the job run id corresponds to the {{parent_run_id}} for jobs with two or more tasks https://stackoverflow.com/questions/75428900/confusion-about-run-id-and-parent-run-id-variables-for-databricks-jobs\n",
+    "# Note: this id is the same for all tasks within a job run where there are multiple tasks.\n",
     "db_run_id = dbutils.widgets.get(\"db_run_id\")\n",
     "# This is the name of the external bucket -- the internal bucket is simply this name with _internal suffixed.\n",
     "gcp_bucket_name = dbutils.widgets.get(\"gcp_bucket_name\")\n",
-    "\n",
-    "# Notify user that an inference run has been kicked off.\n",
-    "w = WorkspaceClient()\n",
-    "MANDRILL_USERNAME = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_USERNAME\")\n",
-    "MANDRILL_PASSWORD = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_PASSWORD\")\n",
-    "SENDER_EMAIL = Address(\"Datakind Info\", \"help\", \"datakind.org\")\n",
-    "DK_CC_EMAIL = \"education@datakind.org\"\n",
-    "# NOT WORKING -- can't find the package\n",
-    "# emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
     "\n",
     "# Define paths (using Unity Catalog volumes)\n",
     "internal_pipeline_path = f\"/Volumes/{DB_workspace}/{institution_name}_bronze/bronze_volume/inference_jobs/{db_run_id}/raw_files/\"\n",
