--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -16,7 +16,18 @@
      "title": ""
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.9.6' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "This script performs model inference for the Student Success Tool (SST) pipeline.\n",
@@ -33,8 +44,9 @@
     "\n",
     "# Import necessary libraries\n",
     "import logging\n",
-    "import typing as t\n",
+    "import os\n",
     "\n",
+    "import typing as t\n",
     "import functools as ft\n",
     "import matplotlib.pyplot as plt\n",
     "import mlflow\n",
@@ -44,12 +56,15 @@
     "from databricks.connect import DatabricksSession\n",
     "from databricks.sdk.runtime import dbutils  # noqa: F401\n",
     "from pyspark.sql.types import FloatType, StringType, StructField, StructType\n",
+    "from databricks.sdk import WorkspaceClient\n",
+    "from email.headerregistry import Address\n",
     "\n",
     "# Import project-specific modules\n",
     "import student_success_tool.dataio as dataio\n",
     "from student_success_tool.modeling import inference\n",
     "import student_success_tool.modeling as modeling\n",
     "from student_success_tool.schemas import pdp as schemas\n",
+    "from student_success_tool import emails\n",
     "\n",
     "# Disable mlflow autologging (prevents conflicts in Databricks environments)\n",
     "mlflow.autolog(disable=True)\n",
@@ -74,6 +89,14 @@
     "model_name = dbutils.widgets.get(\"model_name\")\n",
     "model_version = dbutils.widgets.get(\"version_id\")\n",
     "model_type = dbutils.widgets.get(\"model_type\")\n",
+    "notif_email = dbutils.widgets.get(\"notification_email\")\n",
+    "\n",
+    "# Secrets from Databricks\n",
+    "w = WorkspaceClient()\n",
+    "MANDRILL_USERNAME = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_USERNAME\")\n",
+    "MANDRILL_PASSWORD = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_PASSWORD\")\n",
+    "SENDER_EMAIL = Address(\"Datakind Info\", \"help\", \"datakind.org\")\n",
+    "DK_CC_EMAIL = 'education@datakind.org'\n",
     "\n",
     "# --- Unity caatalog schemas ---\n",
     "read_schema = f\"{institution_name}_silver\"\n",
@@ -193,6 +216,12 @@
     "    )\n",
     "    logging.info(\"Predictions saved to: %s\",predicted_dataset_path)\n",
     "\n",
+    "\n",
+    "    # --- Email notify users ---\n",
+    "    # Uncomment below once we want to enable CC'ing to DK's email.\n",
+    "    # emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [DK_CC_EMAIL], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
+    "    emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
+    "\n",
     "    # --- SHAP Values Calculation ---\n",
     "    pred_probs = df_predicted_dataset[\"predicted_prob\"]\n",
     "\n",
@@ -279,6 +308,18 @@
     "    # Write the inference-ready dataset to Delta Lake.\n",
     "    shap_results_path = f\"{catalog}.{write_schema}.{sst_job_id}_shap_results_dataset\"\n",
     "    dataio.to_delta_table(result, shap_results_path, spark_session=spark_session)\n",
+    "\n",
+    "    # --- Save Results to ext/ folder in Gold volume. ---\n",
+    "    # Specify where in the gold volume these output files should be stored.\n",
+    "    result_path = f\"/Volumes/{DB_workspace}/{institution_name}_gold/gold_volume/inference_jobs/{sst_job_id}/ext/\"\n",
+    "    os.makedirs(result_path, exist_ok=True)\n",
+    "\n",
+    "    # Write the DataFrame to CSV in the specified volume\n",
+    "    spark.createDataFrame(result).write.format(\"csv\").option(\"header\", \"true\").mode(\"overwrite\").save(result_path+'inference_output.csv')\n",
+    "\n",
+    "    # Write the SHAP chart png to the volume\n",
+    "    shap_fig.savefig(result_path+'shap_chart.png')\n",
+    "\n",
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
    ]
@@ -353,8 +394,14 @@
    "notebookName": "pdp_model_inference",
    "widgets": {}
   },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
