rm .csv since it's saving a folder

--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -315,7 +315,7 @@
     "    os.makedirs(result_path, exist_ok=True)\n",
     "\n",
     "    # Write the DataFrame to CSV in the specified volume\n",
-    "    spark.createDataFrame(result).write.format(\"csv\").option(\"header\", \"true\").mode(\"overwrite\").save(result_path+'inference_output.csv')\n",
+    "    spark.createDataFrame(result).write.format(\"csv\").option(\"header\", \"true\").mode(\"overwrite\").save(result_path+'inference_output')\n",
     "\n",
     "    # Write the SHAP chart png to the volume\n",
     "    shap_fig.savefig(result_path+'shap_chart.png')\n",
