--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -278,6 +278,7 @@
     "    )\n",
     "\n",
     "    # --- SHAP Summary Plot ---\n",
+    "    # NOTE: to change colors https://stackoverflow.com/questions/60153036/changing-the-gradient-color-of-shap-summary-plot-to-specific-2-or-3-rgb-grad\n",
     "    shap.summary_plot(\n",
     "        df_shap_values.loc[:, model_feature_names].to_numpy(),\n",
     "        df_serving_dataset.loc[:, model_feature_names],\n",
@@ -315,7 +316,9 @@
     "    os.makedirs(result_path, exist_ok=True)\n",
     "\n",
     "    # Write the DataFrame to CSV in the specified volume\n",
-    "    spark.createDataFrame(result).write.format(\"csv\").option(\"header\", \"true\").mode(\"overwrite\").save(result_path+'inference_output')\n",
+    "    spark_df = spark.createDataFrame(result)\n",
+    "    # Note that this writes multiple files under the save() parameter as a directory.\n",
+    "    spark_df.coalesce(1).write.format(\"csv\").option(\"header\", \"true\").mode(\"overwrite\").save(result_path+'inference_output')\n",
     "\n",
     "    # Write the SHAP chart png to the volume\n",
     "    shap_fig.savefig(result_path+'shap_chart.png')\n",
