--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -96,7 +96,7 @@
     "MANDRILL_USERNAME = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_USERNAME\")\n",
     "MANDRILL_PASSWORD = w.dbutils.secrets.get(scope=\"sst\", key=\"MANDRILL_PASSWORD\")\n",
     "SENDER_EMAIL = Address(\"Datakind Info\", \"help\", \"datakind.org\")\n",
-    "DK_CC_EMAIL = 'education@datakind.org'\n",
+    "DK_CC_EMAIL = \"education@datakind.org\"\n",
     "\n",
     "# --- Unity caatalog schemas ---\n",
     "read_schema = f\"{institution_name}_silver\"\n",
@@ -214,13 +214,14 @@
     "        predicted_dataset_path,\n",
     "        spark_session=spark_session,\n",
     "    )\n",
-    "    logging.info(\"Predictions saved to: %s\",predicted_dataset_path)\n",
-    "\n",
+    "    logging.info(\"Predictions saved to: %s\", predicted_dataset_path)\n",
     "\n",
     "    # --- Email notify users ---\n",
     "    # Uncomment below once we want to enable CC'ing to DK's email.\n",
     "    # emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [DK_CC_EMAIL], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
-    "    emails.send_inference_kickoff_email(SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD)\n",
+    "    emails.send_inference_kickoff_email(\n",
+    "        SENDER_EMAIL, [notif_email], [], MANDRILL_USERNAME, MANDRILL_PASSWORD\n",
+    "    )\n",
     "\n",
     "    # --- SHAP Values Calculation ---\n",
     "    pred_probs = df_predicted_dataset[\"predicted_prob\"]\n",
@@ -318,10 +319,12 @@
     "    # Write the DataFrame to CSV in the specified volume\n",
     "    spark_df = spark.createDataFrame(result)\n",
     "    # Note that this writes multiple files under the save() parameter as a directory.\n",
-    "    spark_df.coalesce(1).write.format(\"csv\").option(\"header\", \"true\").mode(\"overwrite\").save(result_path+'inference_output')\n",
+    "    spark_df.coalesce(1).write.format(\"csv\").option(\"header\", \"true\").mode(\n",
+    "        \"overwrite\"\n",
+    "    ).save(result_path + \"inference_output\")\n",
     "\n",
     "    # Write the SHAP chart png to the volume\n",
-    "    shap_fig.savefig(result_path+'shap_chart.png')\n",
+    "    shap_fig.savefig(result_path + \"shap_chart.png\")\n",
     "\n",
     "else:\n",
     "    logging.error(\"Spark session not initialized.\")"
