Fix lint issues

--- a/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
+++ b/pipelines/tasks/pdp_model_inference/pdp_model_inference.ipynb
@@ -317,7 +317,7 @@
     "    os.makedirs(result_path, exist_ok=True)\n",
     "\n",
     "    # Write the DataFrame to CSV in the specified volume\n",
-    "    spark_df = spark.createDataFrame(result)\n",
+    "    spark_df = spark_session.createDataFrame(result)\n",
     "    # Note that this writes multiple files under the save() parameter as a directory.\n",
     "    spark_df.coalesce(1).write.format(\"csv\").option(\"header\", \"true\").mode(\n",
     "        \"overwrite\"\n",
@@ -354,34 +354,6 @@
     "- mlflow (current: 2.20.0, required: mlflow==2.19.0)\n",
     "To fix the mismatches, call `mlflow.pyfunc.get_model_dependencies(model_uri)` to fetch the model's environment and install dependencies using the resulting environment file.\n",
     "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a602528a-c898-4d00-9331-dadcef24ceb1",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# TODO save the charts\n",
-    "# # # --- Log SHAP Plot to MLflow ---\n",
-    "# with mlflow.start_run(run_id=model_run_id) as run:\n",
-    "#     mlflow.log_figure(\n",
-    "#         shap_fig,\n",
-    "#         f\"shap_summary_dataset_name_dataset_\"\n",
-    "#         f\"{df_ref.shape}_{sst_job_id}_shap_results.png\",\n",
-    "#     )"
    ]
   }
  ],
